# bdk-template

./: .editorconfig  .gitignore  .releaserc  CHANGELOG.md  README.md  cookiecutter.json  custom_filters.py  poetry_scripts.py  pyproject.toml
.github/workflows/: ci.yaml
tests/: change_dir.py  generate_project.py  test_build.py  test_lint.py  test_run_tests.py  test_template.py
{{cookiecutter.project_folder_name}}/: Dockerfile  cspell.json  poetry_scripts.py  pyproject.toml
{{cookiecutter.project_folder_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  book.py
{{cookiecutter.project_slug}}/: .gitignore  README.md  poetry_scripts.py  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __version__.py  book.py
{{cookiecutter.project_slug}}/tests/: test_book.py
